--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>¡Hola, <span id="nombre">Persona Especial</span>!</h1>
-    <p class="mensaje">Este mensaje es solo para ti. Eres increíble y muy importante para mí. 💖</p>
+    <h1>¡Hola, <span id="Angie">Mi musa</span>!</h1>
+    <p class="mensaje">Este mensaje es solo para ti. Eres increíble y muy importante para mí. Este poema es solo para ti, porque nadie más podría entender lo que siento💘</p>
     <button id="boton-interactivo">Haz clic aquí</button>
-    <p id="mensaje-oculto" class="oculto">¡Gracias por ser tan especial! 😊</p>
+    <p id="mensaje-oculto" class="oculto">Toda rosa tiene sus espinas, tú muéstrame cuales son las tuyas y te mostraré unas manos dispuesta a sangrar por ti🌹</p>
     <div class="decoracion"></div>
   </div>
   <script src="script.js"></script>
